# forja-digital

./: .gitignore  README.md  pyproject.toml
src/forja_digital.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/forja_digital_ingest/: __init__.py  cli.py  frontmatter.py  ingest.py
tests/: test_ingest.py
